results/SVCOMP/4-shot/log-ExSymExeTestClassFields-2024_03_18_23_18_13.txt
class Main {
  static int field;
  int field2;

  //@ requires arg == 2;
  //@ ensures \result == true;
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ requires field == 0 && field2 == 0;
  //@ ensures \result == true;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:13: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires field == 0 && field2 == 0;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:13: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires field == 0 && field2 == 0;
                             ^
2 errors

